--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ vtes.app.jwtExpirationMs=7200000
 vtes.app.jwtCookieName=accessToken
 vtes.app.jwtRefreshCookieName=refreshToken
 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/vtes
 spring.datasource.password=AdminDef
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
