--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
 server.port= 8080
+spring.datasource.url= jdbc:mysql://localhost:3306/vtes?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= 123456
+
+vtes.app.jwtSecret= VtesSecretKey
+vtes.app.jwtExpirationMs= 600000
+vtes.app.jwtRefreshExpirationMs= 600000
 
 
-vtes.app.jwtExpirationMs=7200000
-vtes.app.jwtCookieName=accessToken
-vtes.app.jwtRefreshCookieName=refreshToken
-
-spring.datasource.url=jdbc:mysql://localhost:3306/vtes
-spring.datasource.password=
-spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# -----------------------
+# Email
+# -----------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vtessystem@gmail.com
+spring.mail.password=nvsxikgnlesoxzsh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 spring.cloud.openfeign.client.config.navitime.url=https://navitime-route-totalnavi.p.rapidapi.com
