--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ vtes.app.jwtExpirationMs=7200000
 vtes.app.jwtCookieName=accessToken
 vtes.app.jwtRefreshCookieName=refreshToken
 
+aws.access.key.id=AKIA5RXGX5G55GQQSZHG
+aws.secret.access.key=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
+aws.s3.region=ap-southeast-2
+aws.s3.bucket.name=vtes-exported-files
+
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=10MB
 
 spring.datasource.url=jdbc:mysql://localhost:3306/vtes
 spring.datasource.password=AdminDef
