--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+
+# -----------------------
+# Database
+# -----------------------
 server.port= 8080
+spring.datasource.url=jdbc:mysql://localhost:3306/vtes
+spring.datasource.username=root
+spring.datasource.password=123456
+
+
+vtes.cros.url=http://localhost:5173
 
 vtes.app.jwtSecret= VtesSecretKey
 vtes.app.jwtExpirationMs= 600000
 vtes.app.jwtRefreshExpirationMs= 600000
-
 
 
 aws.access.key.id=AKIA5RXGX5G55GQQSZHG
@@ -14,13 +23,15 @@ aws.s3.bucket.name=vtes-exported-files
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=10MB
 
-spring.datasource.url=jdbc:mysql://localhost:3306/vtes
-spring.datasource.password=123456
-spring.datasource.username=root
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+
+# -----------------------
+# Show sql
+# -----------------------
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
@@ -34,7 +45,14 @@ spring.mail.password=nvsxikgnlesoxzsh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+# -----------------------
+# Cloud
+# -----------------------
 #spring.cloud.openfeign.client.config.navitime-totalnavi.url=https://navitime-route-totalnavi.p.rapidapi.com
 #spring.cloud.openfeign.client.config.navitime-transport.url=https://navitime-transport.p.rapidapi.com
+
+
+# -----------------------
+# Api
+# -----------------------
 feign.client.api.key=2516f33c9dmshbc0da503916a548p195a7djsn341e1f916f12
