--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 server.port= 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/vtes
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=AdminDef
 
 
 vtes.cros.url=http://localhost:5173
