update db structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
     networks:
       - backend
 networks:
-  backend: 
-    external: true
+  backend: {}
 volumes:
   mysql-vtes-data:
   mysql-config:
