--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@
 # Database
 # -----------------------
 server.port= 8080
-spring.datasource.url=jdbc:mysql://localhost:3306/vtes
+spring.datasource.url=jdbc:mysql://mysql:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=AdminDef
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 vtes.cros.url=http://localhost:5173
 
@@ -22,11 +24,6 @@ aws.s3.bucket.name=vtes-exported-files
 
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=10MB
-
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 # -----------------------
