fix token-cookie of expiration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Database
 # -----------------------
 server.port= 8080
-spring.datasource.url=jdbc:mysql://mysql:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=AdminDef
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,9 +12,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 vtes.cros.url=http://localhost:5173
 
-vtes.app.jwtSecret= VtesSecretKey
-vtes.app.jwtExpirationMs= 600000
-vtes.app.jwtRefreshExpirationMs= 600000
+#unit : Seconds
+vtes.app.jwtSecret=VtesSecretKey
+vtes.app.jwtExpiration=7200
+vtes.app.jwtRefreshExpiration=2592000
+#verify code : 30 minutes
+vtes.app.verifyCodeExpiration=108000
+#access cookie : 2H
+vtes.app.accessCookieExpiration=7200
+#refresh cookie : 30days
+vtes.app.refreshCookieExpiration=2592000
 
 
 aws.access.key.id=AKIA5RXGX5G55GQQSZHG
