--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Database
 # -----------------------
 server.port= 8080
-spring.datasource.url=jdbc:mysql://localhost:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=AdminDef
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
