--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Database
 # -----------------------
 server.port= 8080
-spring.datasource.url=jdbc:mysql://mysql:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
 spring.datasource.password=AdminDef
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -61,4 +61,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # -----------------------
 # Api
 # -----------------------
-feign.client.api.key=2516f33c9dmshbc0da503916a548p195a7djsn341e1f916f12,5ab14458eemsh358a14427dacddap17785fjsnd5274127dcd8,a39f9bc778msha75c21a044d311fp1626d4jsn7501421a35f6,23a946e3a8mshee4dff0a2e8ee8fp1a6d55jsn3ab4b64751c0
+feign.client.api.key=2516f33c9dmshbc0da503916a548p195a7djsn341e1f916f12,5ab14458eemsh358a14427dacddap17785fjsnd5274127dcd8,a39f9bc778msha75c21a044d311fp1626d4jsn7501421a35f6,23a946e3a8mshee4dff0a2e8ee8fp1a6d55jsn3ab4b64751c0,0deccf7d83mshd5a77658ead44a2p1d51efjsnd15d28fae762
