--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.12.159</version>
         </dependency>
+        <dependency>
+   			 <groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.lettuce</groupId>
 			<artifactId>lettuce-core</artifactId>
