--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Database
 # -----------------------
 server.port= 8080
-spring.datasource.url=jdbc:mysql://localhost:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://mysql:3306/vtes?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=true&&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
 spring.datasource.password=AdminDef
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -31,6 +31,19 @@ aws.s3.bucket.name=vtes-exported-files
 
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=10MB
+
+
+# -----------------------
+# Redis config
+# -----------------------
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=vtes2023
+
+spring.redis.lettuce.pool.max-active=100
+spring.redis.lettuce.pool.max-idle=50
+spring.redis.lettuce.pool.min-idle=10
+
 
 
 # -----------------------
