--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.servlet.multipart.max-file-size=10MB
 # -----------------------
 # Redis config
 # -----------------------
-spring.redis.host=redis
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=vtes2023
 
